:zap: Add weather-notify.gif.

--- a/articles/2023-06-09-dvpm.md
+++ b/articles/2023-06-09-dvpm.md
@@ -188,7 +188,7 @@ export async function main(denops: Denops): Promise<void> {
 }
 ```
 
-コメント部分に実施している内容を簡単に記載していので、大まかな内容は理解できるかと思います。
+コメント部分に実施している内容を簡単に記載しているので、大まかな内容は理解できるかと思います。
 上記のコードを保存して Vim / Neovim を再起動すると、 `dvpm.add` で指定したプラグインがインストールされるはずです。
 
 指定できるオプションの詳細はリポジトリの README を参照ください。
@@ -203,7 +203,7 @@ https://github.com/yukimemi/dvpm#api
 
 の記事にあるように、 [denops.vim](https://github.com/vim-denops/denops.vim) は自動的に runtimepath 内の `denops/*/main.ts` を読み込み、 `*` の部分をプラグイン名として登録します。
 そして、 `main` 関数が実行されます。
-このコードでは `denops/config/main.ts` というファイルを作成していますので、 `config` という名前の [denops.vim](https://github.com/vim-denops/denops.vim) プラグインを作成していることになります。(これであなたも立派な [denops.vim](https://github.com/vim-denops/denops.vim) プラグイン作成者です！)
+このコードでは `denops/config/main.ts` というファイルを作成しているので、 `config` という名前の [denops.vim](https://github.com/vim-denops/denops.vim) プラグインを作成していることになります。(これであなたも立派な [denops.vim](https://github.com/vim-denops/denops.vim) プラグイン作成者です！)
 ※設定として記載するために `config` という名前を使用していますが、自分の好きな名前に変更することも可能です。(`config` という名前のプラグインはさすがにないと思うので衝突の心配はないはずです・・・)
 
 この [denops.vim](https://github.com/vim-denops/denops.vim) の仕組みに乗って作成された `config` プラグインの中から呼び出して利用しているのが [yukimemi/dvpm: dvpm - Denops Vim/Neovim Plugin Manager](https://github.com/yukimemi/dvpm) になります。
@@ -221,8 +221,8 @@ https://github.com/yukimemi/dvpm#api
 
 ・・・はい・・・ただし、実はこの結果はプラグインがまったく読み込まれていない時間になります・・・。
 プラグインをどれだけ入れているかは起動時間には関係しません。
-実際には、 Vim / Neovim 起動時には [denops.vim](https://github.com/vim-denops/denops.vim) のみが読み込まれ、 [denops.vim](https://github.com/vim-denops/denops.vim) が先程自作した `config` プラグインを読み込み、さらにそれから [dvpm](https://github.com/yukimemi/dvpm) がプラグインを runtimepath に追加していく処理がバックグラウンドで遅延実行されます。
-つまり、起動直後はプラグイを利用することはできませんが、どれだけプラグインを導入しても Vim / Neovim の起動時間は劣化しません。
+実際には、 Vim / Neovim 起動時には [denops.vim](https://github.com/vim-denops/denops.vim) のみが読み込まれ、 [denops.vim](https://github.com/vim-denops/denops.vim) が先程自作した `config` プラグインを読み込み、さらにそれから [dvpm](https://github.com/yukimemi/dvpm) がプラグインを runtimepath に追加していく処理がバックグラウンドで実行されます。
+つまり、起動直後はプラグインを利用することはできませんが、どれだけプラグインを導入しても Vim / Neovim の起動時間は劣化しません。
 
 自分の場合は、 Windows で Vim / Neovim の起動時間が気になっていたため、プラグインが使用できなくてもとりあえず最速で起動してくれるこの設定方法はけっこう気に入っています。
 
@@ -252,7 +252,7 @@ https://github.com/yukimemi/dvpm#api
 
 [ddc](https://github.com/Shougo/ddc.vim) や [ddu](https://github.com/Shougo/ddu.vim) のように、 JSON のような引数で設定を行うプラグインは非常に書きやすいです。
 
-例えば、以下のような感じです。
+例えば、私の現時点の設定は以下になります。
 
 https://github.com/yukimemi/dotfiles/blob/ebea69cc24b377fbdbb8606423813ee4e199a998/.config/nvim/denops/config/plugins/ddc.ts#L108-L147
 
@@ -276,7 +276,7 @@ https://github.com/yukimemi/dotfiles/blob/ebea69cc24b377fbdbb8606423813ee4e199a9
 
 `config` ディレクトリに移動して、次のコマンドを実行します。
 
-- Mac / Linux の場合
+- Mac / Linux の場合 (zsh)
 
 ```sh
 udd **/*.ts
@@ -296,7 +296,7 @@ udd $(gci -r -file *.ts)
 
 例えば、先程の `denops/config/main.ts` に以下を追記してみます。
 
-```ts
+```typescript
 // import へ以下を追記
 import * as buffer from "https://deno.land/x/denops_std@v5.0.0/buffer/mod.ts";
 
@@ -306,30 +306,73 @@ export async function main(denops: Denops): Promise<void> {
   // ... 省略
 
   // main 関数の最後に以下を追記
+  const area = "130000";
   const res = await fetch(
-    "https://www.jma.go.jp/bosai/forecast/data/overview_forecast/130000.json",
+    `https://www.jma.go.jp/bosai/forecast/data/overview_forecast/${area}.json`,
   );
+  const msg = [
+    "☆東京の天気情報☆",
+    "------------------------------",
+    "",
+    ...(await res.json()).text.split("\n"),
+  ];
   const buf = await buffer.open(denops, "forecast");
-  await buffer.ensure(denops, buf.bufnr, async () => {
-    await fn.setbufvar(denops, buf.bufnr, "&buftype", "nofile");
-    await fn.setbufvar(denops, buf.bufnr, "&swapfile", 0);
-    await buffer.replace(
-      denops,
-      buf.bufnr,
-      ["☆東京の天気情報☆", ...(await res.json()).text.split("\n")],
-    );
-    await buffer.concrete(denops, buf.bufnr);
-  });
+  await fn.setbufvar(denops, buf.bufnr, "&buftype", "nofile");
+  await fn.setbufvar(denops, buf.bufnr, "&swapfile", 0);
+  await buffer.replace(denops, buf.bufnr, msg);
+  await buffer.concrete(denops, buf.bufnr);
 }
 ```
 
 これだけの記載で Vim / Neovim 起動時にお天気情報を確認することができます！
 
-![neovim-startuptime](https://github.com/yukimemi/zenn-dev/blob/master/articles/img/otenki-denops.png?raw=true)
+![neovim-startuptime](https://github.com/yukimemi/zenn-dev/blob/master/articles/img/weather-buffer.png?raw=true)
+
+[nvim-notify](https://github.com/rcarriga/nvim-notify) を使用して以下の記載に変更すると、通知として確認することも可能です。これで雨の日も安心。
+
+```typescript
+export async function main(denops: Denops): Promise<void> {
+  // ... 省略
+  // プラグインへ以下を追加。
+  await dvpm.add({
+    url: "rcarriga/nvim-notify",
+    after: async (denops: Denops) => {
+      await denops.cmd(`lua require("notify").setup()`);
+    },
+  });
+
+  // main 関数の最後に以下を追記
+  const area = "130000";
+  const res = await fetch(
+    `https://www.jma.go.jp/bosai/forecast/data/overview_forecast/${area}.json`,
+  );
+  const msg = [
+    "☆東京の天気情報☆",
+    "------------------------------",
+    "",
+    ...(await res.json()).text.split("\n"),
+  ];
+  await denops.call(
+    `luaeval`,
+    `
+      require("notify")(_A.msg, vim.log.levels.INFO, {
+        timeout = _A.timeout,
+        on_open = function(win)
+          vim.wo[win].wrap = true
+        end,
+      })
+    `,
+    { msg, timeout: 30000 },
+  );
+}
+```
+
+![weather-notify](https://github.com/yukimemi/zenn-dev/blob/master/articles/img/weather-notify.gif?raw=true)
 
 また、最近では [ChatGPT](https://openai.com/blog/chatgpt) の API を使って本日の励ましの一言をもらうなど、さまざまなことができそうです。
 
-[denops.vim](https://github.com/vim-denops/denops.vim) は非常に書きやすくて楽しいライブラリですので、 私みたいに設定ファイルを全て・・・というのはさすがにやり過ぎですが、簡単なプラグインを作成してみることはとても良いと思います。
+## おわりに
 
+[denops.vim](https://github.com/vim-denops/denops.vim) は非常に書きやすくて楽しいので、 私みたいに設定ファイルを全て・・・というのはさすがにやり過ぎですが、先程のお天気通知みたいなプラグインであれば本当にすぐ作れちゃうので、ぜひとも何か作ってみてください。
 
 
