:zap: Post dvpm.

--- a/articles/2023-06-09-dvpm.md
+++ b/articles/2023-06-09-dvpm.md
@@ -3,13 +3,15 @@ title: "TypeScript で Vim / Neovim の設定を書く！"
 emoji: "🐜"
 type: "tech" # tech: 技術記事 / idea: アイデア
 topics: ["vim", "deno", "denops", "neovim"]
-published: false
+published: true
 ---
 
+:::message
 この記事は [Vim 駅伝](https://vim-jp.org/ekiden/) 2023/06/09(金) の記事です。
 
-前回は sontixyou さんの [現在開いているファイルパスをコピーするスクリプトを作った話]() です。
+前回は sontixyou さんの [Neovimで今開いているファイルのパスをコピーするスクリプトを作った話](https://zenn.dev/kenkenlysh/articles/9d6d8c40229d55) です。
 次回は 2023/06/12(月) に公開される予定です。
+:::
 
 ## はじめに
 
@@ -250,7 +252,7 @@ https://github.com/yukimemi/dvpm#api
 
 [dotfiles/.config/nvim at main · yukimemi/dotfiles · GitHub](https://github.com/yukimemi/dotfiles/tree/main/.config/nvim)
 
-[ddc](https://github.com/Shougo/ddc.vim) や [ddu](https://github.com/Shougo/ddu.vim) のように、 JSON のような引数で設定を行うプラグインは非常に書きやすいです。
+[ddc](https://github.com/Shougo/ddc.vim) や [ddu](https://github.com/Shougo/ddu.vim) のように、 JSON のような引数で設定を行うプラグインは非常に書きやすいです。(実は最近 TypeScript で設定ができるようになったらしいのでそっちのほうが良いと思います・・・。)
 
 例えば、私の現時点の設定は以下になります。
 
