:zap: Fix indent.

--- a/articles/2023-06-09-dvpm.md
+++ b/articles/2023-06-09-dvpm.md
@@ -264,7 +264,7 @@ https://github.com/yukimemi/dotfiles/blob/ebea69cc24b377fbdbb8606423813ee4e199a9
 https://github.com/yukimemi/dotfiles/blob/ebea69cc24b377fbdbb8606423813ee4e199a998/.config/nvim/denops/config/plugins/telescope.ts#L117-L156
 
 
-### アップデート方法
+## アップデート方法
 
 #### プラグインのアップデート
 
@@ -292,7 +292,7 @@ udd $(gci -r -file *.ts)
 
 これにより、各 `import` 文の `@x.x.x` バージョンが更新されます。
 
-### おまけ
+## おまけ
 
 [Deno](https://deno.com/runtime) を設定として利用することで、 API の呼び出しが非常に簡単に書けます。また、 [Deno](https://deno.com/runtime) や [npm](https://www.npmjs.com/) の 豊富なライブラリも使用可能です。
 
