:zap: Update dvpm version.

--- a/articles/2023-06-09-dvpm.md
+++ b/articles/2023-06-09-dvpm.md
@@ -114,7 +114,7 @@ import { ensureString } from "https://deno.land/x/unknownutil@v2.1.1/mod.ts";
 import { execute } from "https://deno.land/x/denops_std@v5.0.0/helper/mod.ts";
 import { globals } from "https://deno.land/x/denops_std@v5.0.0/variable/mod.ts";
 
-import { Dvpm } from "https://deno.land/x/dvpm@0.5.0/mod.ts";
+import { Dvpm } from "https://deno.land/x/dvpm@1.0.0/mod.ts";
 
 export async function main(denops: Denops): Promise<void> {
 
@@ -131,12 +131,26 @@ export async function main(denops: Denops): Promise<void> {
   await dvpm.add({ url: "yukimemi/dps-autocursor" });
 
   // ブランチを指定することもできます。
-  await dvpm.add({ url: "neoclide/coc.nvim", branch: "release" });
+  // await dvpm.add({ url: "neoclide/coc.nvim", branch: "release" });
+
+  // build オプションでは、 `install` か `update` 実施後に実行する処理を記載できます。
+  // `Denops` オブジェクト以外に、 `PlugInfo` オブジェクトを引数に取ることもできます。
+  // 含まれている情報については README を参照ください。
+  await dvpm.add({
+    url: "neoclide/coc.nvim",
+    branch: "master",
+    build: async ({ info }) => {
+      const args = ["install", "--frozen-lockfile"];
+      const cmd = new Deno.Command("yarn", { args, cwd: info?.dst });
+      const output = await cmd.output();
+      console.log(new TextDecoder().decode(output.stdout));
+    },
+  });
 
   // `before` はプラグインが runtimepath へ追加される前に実行されます。
   await dvpm.add({
     url: "yukimemi/dps-autobackup",
-    before: async (denops: Denops) => {
+    before: async ({ denops }) => {
       // `denops_std` の関数で Vim のグローバル変数をセットしています。
       // let g:autobackup_dir = "~/.cache/autobackup" と等価。
       await globals.set(denops,
@@ -148,7 +162,7 @@ export async function main(denops: Denops): Promise<void> {
   // `after` はプラグインを runtimepath へ追加した後に実行されます。
   await dvpm.add({
     url: "folke/which-key.nvim",
-    after: async (denops: Denops) => {
+    after: async ({ denops }) => {
       // `denops_std` の関数 `execute` では Vim のコマンドがなんでも実行可能です。
       await execute(denops, `lua require("which-key").setup()`);
     },
@@ -159,7 +173,7 @@ export async function main(denops: Denops): Promise<void> {
   await dvpm.add({
     url: "yukimemi/dps-randomcolorscheme",
     dst: "~/src/github.com/yukimemi/dps-randomcolorscheme",
-    before: async (denops: Denops) => {
+    before: async ({ denops }) => {
       // `denops_std` の `mapping` 用関数を利用するとキーマッピング設定ができます。
       await mapping.map(denops, "<space>ro", "<cmd>ChangeColorscheme<cr>", { mode: "n" });
       await mapping.map(denops, "<space>rd", "<cmd>DisableThisColorscheme<cr>", { mode: "n" });
@@ -175,7 +189,7 @@ export async function main(denops: Denops): Promise<void> {
   // `enabled` には関数指定もできるので 下記のように Vim だけ有効などの指定が可能です。
   await dvpm.add({
     url: "editorconfig/editorconfig-vim",
-    enabled: async (denops: Denops) => !(await fn.has(denops, "nvim")),
+    enabled: async ({ denops }) => !(await fn.has(denops, "nvim")),
   });
   // `dependencies` を指定することで、プラグインが runtimepath へ追加される順序を制御することができます。
   await dvpm.add({
@@ -338,7 +352,7 @@ export async function main(denops: Denops): Promise<void> {
   // プラグインへ以下を追加。
   await dvpm.add({
     url: "rcarriga/nvim-notify",
-    after: async (denops: Denops) => {
+    after: async ({ denops }) => {
       await denops.cmd(`lua require("notify").setup()`);
     },
   });
