fix: use `deno task` instead of `deno run` for zenn commands

--- a/articles/2024-04-29_spyrun.md
+++ b/articles/2024-04-29_spyrun.md
@@ -8,13 +8,20 @@ published: false
 
 ## はじめに
 
-ファイルの作成、変更、削除などを検知して、何か処理を実行する、というのはビルドツールやタスクランナーとして使用頻度が高いです。
+ファイルの作成、変更、削除などを検知して、何か処理を実行する、というのはビルドツールやタスクランナーとして使用頻度が高いと思います。
 色んな場面で使用できると思い、 `Rust` の練習がてら作ってみることにしました。
 
 https://github.com/yukimemi/spyrun
 
 `spyrun` は、ファイルの変更を検知して何か処理を実行するためのツールです。
 
+## インストール
+
+以下コマンドを実行してインストールしてください。
+
+```sh
+cargo install spyrun
+```
 
 ## 使い方
 
